force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__BusinessEntityCountryofRgstr__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessEntityCountryofRgstr__c</fullName>
    <label>Business Entity Country of Rgstr</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessEntityCountryofRgstr</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>