force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__BusinessEntityRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessEntityRegistrationDate__c</fullName>
    <label>Business Entity Registration Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessEntityRegistrationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>