force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__BusinessEntityRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessEntityRegistrationNumber__c</fullName>
    <label>Business Entity Registration Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessEntityRegistrationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>