force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__BusLicIssuingAuthorityName__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusLicIssuingAuthorityName__c</fullName>
    <label>Business Lic Issuing Authority Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusLicIssuingAuthorityName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>