force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__CustomerReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustomerReferenceNumber__c</fullName>
    <label>Customer Reference Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustomerReferenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>