force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>ssot__DateOfBirth__c</fullName>
    <label>Date of Birth</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DateOfBirth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>