force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__HasHighNetWorth__c.field-meta.xml
<CustomField>
    <fullName>ssot__HasHighNetWorth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has High Net Worth</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HasHighNetWorth</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>