force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsAged__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aged</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAged</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>