force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsBusinessEntityListonStockExchange__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsBusinessEntityListonStockExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BE Listed on Stock Exchange</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsBusinessEntityListonStockExchange</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>