force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsInstitutionalized__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsInstitutionalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Institutionalized</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsInstitutionalized</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>