force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsMedicaidEligible__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMedicaidEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Medicaid Eligible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMedicaidEligible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>