force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsOffBoarded__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOffBoarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Off-Boarded</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOffBoarded</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>