force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__IsRecalculationRequired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRecalculationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recalculation Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRecalculationRequired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>