force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__LastProfileReviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastProfileReviewDateTime__c</fullName>
    <label>Last Profile Review Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastProfileReviewDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>