force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__NextProfileReviewDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextProfileReviewDateTime__c</fullName>
    <label>Next Profile Review Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextProfileReviewDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>