force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__OffBoardingComments__c.field-meta.xml
<CustomField>
    <fullName>ssot__OffBoardingComments__c</fullName>
    <label>Off-Boarding Comments</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OffBoardingComments</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>