force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyFundSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyFundSource__c</fullName>
    <label>Party Fund Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyFundSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>