force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyPrimaryIdentifierType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyPrimaryIdentifierType__c</fullName>
    <label>Party Primary Identification Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyPrimaryIdentifierType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>