force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfile_PartyId_map_Party_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfile_PartyId_map_Party_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyProfile_PartyId_map_Party_Id_N_1</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyProfile_PartyId_map_Party_Id_N_1</relationshipLabel>
    <relationshipName>PartyProfile_PartyId_map_Party_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>