force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfileBusinessEntityType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileBusinessEntityType__c</fullName>
    <label>Party Profile Business Entity Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileBusinessEntityType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>