force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfileEmploymentIndustry__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileEmploymentIndustry__c</fullName>
    <label>Party Profile Employment Industry</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileEmploymentIndustry</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>