force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfileNationality__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileNationality__c</fullName>
    <label>Party Profile Nationality</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileNationality</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>