force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfileOffBoardingReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileOffBoardingReason__c</fullName>
    <label>Party Profile Off-Boarding Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileOffBoardingReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>