force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyProfileVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyProfileVerificationStatus__c</fullName>
    <label>Party Profile Verification Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyProfileVerificationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>