force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PartyTaxpayerIdentificationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyTaxpayerIdentificationType__c</fullName>
    <label>Party Taxpayer Identification Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyTaxpayerIdentificationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>