force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PrimaryIdentificationName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryIdentificationName__c</fullName>
    <label>Primary Identification Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryIdentificationName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>