force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__PrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryPhone__c</fullName>
    <label>Primary Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryPhone</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>