force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__rel_1731658745908_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658745908_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyProfile_AccountContactId_map_Ac_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>PartyProfile_AccountContactId_map_Ac_rel</relationshipLabel>
    <relationshipName>rel_1731658745908_end</relationshipName>
    <type>Lookup</type>
</CustomField>