force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__rel_1731658769704_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658769704_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyProfile_HouseholdAccountId_map__rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PartyProfile_HouseholdAccountId_map__rel</relationshipLabel>
    <relationshipName>rel_1731658769704_end</relationshipName>
    <type>Lookup</type>
</CustomField>