force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__RetirementFundAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__RetirementFundAccountNumber__c</fullName>
    <label>Retirement Fund Account Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RetirementFundAccountNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>