force-app/main/default/objects/ssot__PartyProfile__dlm/fields/ssot__TaxpayerIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxpayerIdentificationNumber__c</fullName>
    <label>Taxpayer Identification Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxpayerIdentificationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>